2008-05-05  Sebastian Dröge  <slomo@circular-chaos.org>

	* tests/check/gst/gstvalue.c: (GST_START_TEST), (gst_value_suite):
	Add unit test for deserializing uint64s and check some really large
	numbers in the int64 test.

2008-05-04  Sebastian Dröge  <slomo@circular-chaos.org>

	* tools/gst-inspect.c: (n_print), (print_hierarchy),
	(print_interfaces), (print_element_properties_info),
	(print_signal_info):
	Use "%s" as format string instead of printing strings directly.

2008-05-04  Sebastian Dröge  <slomo@circular-chaos.org>

	* gst/gstclock.c: (gst_clock_set_calibration):
	Make some checks actually useful.

	* gst/gstregistrybinary.c: (gst_registry_binary_load_plugin):
	Remove some unused code. Unsigned integers tend to be >= 0.

2008-05-03  Tim-Philipp Müller  <tim.muller at collabora co uk>

	* gst/gstminiobject.c: (gst_value_get_mini_object):
	  Fix 'Since:' version in gst_value_dup_mini_object() docs blurb: this
	  function was not in the unscheduled 0.10.19 release.

2008-05-03  Tim-Philipp Müller  <tim.muller at collabora co uk>

	* gst/gstregistry.c: (gst_registry_scan_path_level):
	  Only print one log message per non-plugin file.

2008-05-03  Tim-Philipp Müller  <tim.muller at collabora co uk>

	* gst/gstinfo.c: (gst_debug_log_default):
	  Fix alignment of debug log columns on 64-bit.

2008-05-03  Tim-Philipp Müller  <tim.muller at collabora co uk>

	* docs/libs/Makefile.am:
	* docs/libs/gstreamer-libs-sections.txt:
	  Ignore private controller headers for docs.

2008-05-03  Sebastian Dröge  <slomo@circular-chaos.org>

	* libs/gst/controller/gstcontrollerprivate.h:
	* libs/gst/controller/gsthelper.c:
	* libs/gst/controller/gstinterpolation.c:
	* libs/gst/controller/gstinterpolationcontrolsource.c:
	(gst_interpolation_control_source_set_interpolation_mode):
	* libs/gst/controller/gstinterpolationcontrolsourceprivate.h:
	* libs/gst/controller/lib.c:
	Move some private declarations into private headers.
